--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
   </head>
   <body>
     <div class="cards">
-      <div class="card">1</div>
-      <div class="card">2</div>
-      <div class="card">3</div>
+      <div class="card">
+        <h3>Lorem ipsum dolor sit amet.</h3>
+      </div>
+      <div class="card">
+        <h2>Lorem ipsum dolor sit amet consectetur adipisicing.</h2>
+      </div>
+      <div class="card">
+        <img src="../../Desktop/Dice game/dice-5.png" alt="" />
+      </div>
       <div class="card">4</div>
       <div class="card">5</div>
       <div class="card">6</div>
