--- a/index.html
+++ b/index.html
@@ -10,13 +10,16 @@
   <body>
     <div class="cards">
       <div class="card">
-        <h3>Lorem ipsum dolor sit amet.</h3>
+        <h1>Lorem ipsum dolor sit amet.</h1>
       </div>
       <div class="card">
         <h2>Lorem ipsum dolor sit amet consectetur adipisicing.</h2>
       </div>
-      <div class="card">
-        <img src="../../Desktop/Dice game/dice-5.png" alt="" />
+      <div class="card card--2">
+        <img
+          src="https://media.istockphoto.com/id/1365868256/photo/3d-fire-and-burning-embers-glowing-fire-glowing-particles-on-black-background.jpg?b=1&s=170667a&w=0&k=20&c=5eS8SZwYNFUunI6t8pAejUgY5gUAXnS1wQ72gUxqxBQ="
+          alt=""
+        />
       </div>
       <div class="card">4</div>
       <div class="card">5</div>
