--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
           alt=""
         />
       </div>
-      <div class="card">4</div>
+      <div class="card">
+        <button class="my--btn">hello</button>
+      </div>
       <div class="card">5</div>
       <div class="card">6</div>
       <div class="card">7</div>
