--- a/index.html
+++ b/index.html
@@ -34,6 +34,26 @@
       <div class="card">12</div>
     </div>
 
+    <div class="container">
+      <div class="item item--1">1: Orange</div>
+      <div class="item item--2">2: Green</div>
+      <div class="item item--3">3: Violet</div>
+      <div class="item item--4">4: Pink</div>
+      <div class="item item--5">5: Blue</div>
+      <div class="item item--6">6: Brown</div>
+    </div>
+
+    <!-- grid challenge -->
+    <div class="grid-container">
+      <header>Header</header>
+      <div class="sm-box sm-box--1">Small box 1</div>
+      <div class="sm-box sm-box--2">Small box 2</div>
+      <div class="sm-box sm-box--3">Small box 3</div>
+      <aside>Sidebar</aside>
+      <article>Main Content</article>
+      <footer>Footer</footer>
+    </div>
+
     <script src="script.js"></script>
     <script src="assignment.js"></script>
   </body>
