--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
     </div>
 
     <div class="container">
-      <div class="item item--1">1: Orange</div>
-      <div class="item item--2">2: Green</div>
-      <div class="item item--3">3: Violet</div>
-      <div class="item item--4">4: Pink</div>
-      <div class="item item--5">5: Blue</div>
-      <div class="item item--6">6: Brown</div>
+      <div class="item item--1">Lampard</div>
+      <div class="item item--2">scholes</div>
+      <div class="item item--3">kaka</div>
+      <div class="item item--4">Sorin</div>
+      <div class="item item--5">Zizou</div>
+      <div class="item item--6">Zola</div>
     </div>
 
     <!-- grid challenge -->
