--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         />
       </div>
       <div class="card">
-        <button class="my--btn">hello</button>
+        <button class="my--btn items">hello</button>
       </div>
       <div class="card">5</div>
       <div class="card">6</div>
@@ -30,8 +30,8 @@
       <div class="card">8</div>
       <div class="card">9</div>
       <div class="card">10</div>
-      <div class="card">11</div>
-      <div class="card">12</div>
+      <div onmouseover="alert('hover')" class="card">11</div>
+      <div onclick="alert('work harder')" class="card">12</div>
     </div>
 
     <div class="container">
