--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="card">5</div>
       <div class="card">6</div>
       <div class="card">7</div>
-      <div class="card">8</div>
+      <div class="card" id="box">8</div>
       <div class="card">9</div>
       <div class="card">10</div>
       <div onmouseover="alert('hover')" class="card">11</div>
@@ -55,6 +55,6 @@
     </div>
 
     <script src="script.js"></script>
-    <script src="assignment.js"></script>
+    <!-- <script src="assignment.js"></script> -->
   </body>
 </html>
