--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       </div>
       <div class="card card--2">
         <img
+          id="image"
           src="https://media.istockphoto.com/id/1365868256/photo/3d-fire-and-burning-embers-glowing-fire-glowing-particles-on-black-background.jpg?b=1&s=170667a&w=0&k=20&c=5eS8SZwYNFUunI6t8pAejUgY5gUAXnS1wQ72gUxqxBQ="
           alt=""
         />
@@ -55,6 +56,6 @@
     </div>
 
     <script src="script.js"></script>
-    <!-- <script src="assignment.js"></script> -->
+    <script src="assignment.js"></script>
   </body>
 </html>
