--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
         />
       </div>
       <div class="card">
-        <button class="my--btn items">hello</button>
+        <button class="my--btn">hello</button>
       </div>
+      <button class="items">change</button>
       <div class="card">5</div>
       <div class="card">6</div>
       <div class="card">7</div>
