--- a/index.html
+++ b/index.html
@@ -8,53 +8,7 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="cards">
-      <div class="card">
-        <h1>Lorem ipsum dolor sit amet.</h1>
-      </div>
-      <div class="card">
-        <h2>Lorem ipsum dolor sit amet consectetur adipisicing.</h2>
-      </div>
-      <div class="card card--2">
-        <img
-          id="image"
-          src="https://media.istockphoto.com/id/1365868256/photo/3d-fire-and-burning-embers-glowing-fire-glowing-particles-on-black-background.jpg?b=1&s=170667a&w=0&k=20&c=5eS8SZwYNFUunI6t8pAejUgY5gUAXnS1wQ72gUxqxBQ="
-          alt=""
-        />
-      </div>
-      <div class="card">
-        <button class="my--btn">hello</button>
-      </div>
-      <button class="items">change</button>
-      <div class="card">5</div>
-      <div class="card">6</div>
-      <div class="card">7</div>
-      <div class="card" id="box">8</div>
-      <div class="card">9</div>
-      <div class="card">10</div>
-      <div onmouseover="alert('hover')" class="card">11</div>
-      <div onclick="alert('work harder')" class="card">12</div>
-    </div>
-
-    <div class="container">
-      <div class="item item--1">Lampard</div>
-      <div class="item item--2">scholes</div>
-      <div class="item item--3">kaka</div>
-      <div class="item item--4">Sorin</div>
-      <div class="item item--5">Zizou</div>
-      <div class="item item--6">Zola</div>
-    </div>
-
-    <!-- grid challenge -->
-    <div class="grid-container">
-      <header>Header</header>
-      <div class="sm-box sm-box--1">Small box 1</div>
-      <div class="sm-box sm-box--2">Small box 2</div>
-      <div class="sm-box sm-box--3">Small box 3</div>
-      <aside>Sidebar</aside>
-      <article>Main Content</article>
-      <footer>Footer</footer>
-    </div>
+    <div>Hello</div>
 
     <script src="script.js"></script>
     <script src="assignment.js"></script>
