--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   </head>
   <body>
     <div>Hello</div>
+    <button onclick="hideButton(this)">click to hide</button>
+    <button onclick="changeColor(this)">change color</button>
 
     <script src="script.js"></script>
     <script src="assignment.js"></script>
