--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <div>Hello</div>
     <button onclick="hideButton(this)">click to hide</button>
     <button onclick="changeColor(this)">change color</button>
+    <p class="text">Lorem ipsum dolor sit amet.</p>
+    <h1 class="text">Lorem ipsum dolor sit.</h1>
+    <span class="text">hello span</span>
+    <button onclick="removeClass(this)">click me</button>
 
     <script src="script.js"></script>
     <script src="assignment.js"></script>
