--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <h1 class="text">Lorem ipsum dolor sit.</h1>
     <span class="text">hello span</span>
     <button onclick="removeClass(this)">click me</button>
+    <p class="class" id="classremove">remove class</p>
+    <button onclick="remove()">click to remove class</button>
 
     <script src="script.js"></script>
     <script src="assignment.js"></script>
