--- a/rps.html
+++ b/rps.html
@@ -21,7 +21,6 @@ if (randomNumber >= 0 && randomNumber < 1 / 3) {
 } else {
   computerMove ='scissors';
 }
-console.log(computerMove);
 
 let result = ''; 
 
@@ -34,20 +33,65 @@ if(computerMove === 'Rock'){
 }
 
 alert(`You picked Rock..... Computer picked ${computerMove},sooooo ${result}`)
-
-
-
-
-
-
-
-
-
  "
     >
       Rock
     </button>
-    <button>Paper</button>
-    <button>Scissors</button>
+    <button
+      onclick="
+      let randomNumber = Math.random();
+    let computerMove = '';
+
+if (randomNumber >= 0 && randomNumber < 1 / 3) {
+  computerMove ='Rock';
+} else if (randomNumber >= 1 / 3 && randomNumber < 2 / 3) {
+  computerMove ='Paper';
+} else {
+  computerMove ='scissors';
+}
+
+let result = ''; 
+
+if(computerMove === 'Rock'){
+    result=' you win';
+}else if (computerMove === 'Paper'){
+    result ='tie'
+}else if (computerMove==='scissors'){
+    result='you lose'
+}
+
+alert(`You picked Rock..... Computer picked ${computerMove},sooooo ${result}`)
+    "
+    >
+      Paper
+    </button>
+    <button
+      onclick="
+      let randomNumber = Math.random();
+    let computerMove = '';
+
+if (randomNumber >= 0 && randomNumber < 1 / 3) {
+  computerMove ='Rock';
+} else if (randomNumber >= 1 / 3 && randomNumber < 2 / 3) {
+  computerMove ='Paper';
+} else {
+  computerMove ='scissors';
+}
+
+let result = ''; 
+
+if(computerMove === 'Rock'){
+    result='you lose';
+}else if (computerMove === 'Paper'){
+    result ='you win'
+}else if (computerMove==='scissors'){
+    result='tie'
+}
+
+alert(`You picked Rock..... Computer picked ${computerMove},sooooo ${result}`)
+    "
+    >
+      Scissors
+    </button>
   </body>
 </html>
