--- a/rps.html
+++ b/rps.html
@@ -4,23 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="main.css" />
     <title>Document</title>
     <script src="rps.js"></script>
   </head>
   <body>
-    <p>Rock Paper Scissors</p>
-    <button
-      onclick="
-    let randomNumber = Math.random();
-    let computerMove = '';
-
-if (randomNumber >= 0 && randomNumber < 1 / 3) {
-  computerMove ='Rock';
-} else if (randomNumber >= 1 / 3 && randomNumber < 2 / 3) {
-  computerMove ='Paper';
-} else {
-  computerMove ='scissors';
-}
+    <p class="rps">Rock Paper Scissors</p>
+    <div class="button-container">
+      <button
+        onclick="
+    pickComputerMove()
 
 let result = ''; 
 
@@ -32,24 +25,14 @@ if(computerMove === 'Rock'){
     result='you win'
 }
 
-alert(`You picked Rock..... Computer picked ${computerMove},sooooo ${result}`)
+document.getElementById('text').innerHTML =(`You picked Rock..... Computer picked ${computerMove},sooooo ${result}`)
  "
-    >
-      Rock
-    </button>
-    <button
-      onclick="
-      let randomNumber = Math.random();
-    let computerMove = '';
-
-if (randomNumber >= 0 && randomNumber < 1 / 3) {
-  computerMove ='Rock';
-} else if (randomNumber >= 1 / 3 && randomNumber < 2 / 3) {
-  computerMove ='Paper';
-} else {
-  computerMove ='scissors';
-}
-
+      >
+        Rock
+      </button>
+      <button
+        onclick="
+     pickComputerMove()
 let result = ''; 
 
 if(computerMove === 'Rock'){
@@ -60,23 +43,14 @@ if(computerMove === 'Rock'){
     result='you lose'
 }
 
-alert(`You picked Rock..... Computer picked ${computerMove},sooooo ${result}`)
+document.getElementById('text').innerHTML =(`You picked Paper..... Computer picked ${computerMove},sooooo ${result}`)
     "
-    >
-      Paper
-    </button>
-    <button
-      onclick="
-      let randomNumber = Math.random();
-    let computerMove = '';
-
-if (randomNumber >= 0 && randomNumber < 1 / 3) {
-  computerMove ='Rock';
-} else if (randomNumber >= 1 / 3 && randomNumber < 2 / 3) {
-  computerMove ='Paper';
-} else {
-  computerMove ='scissors';
-}
+      >
+        Paper
+      </button>
+      <button
+        onclick="
+     pickComputerMove()
 
 let result = ''; 
 
@@ -88,10 +62,12 @@ if(computerMove === 'Rock'){
     result='tie'
 }
 
-alert(`You picked Rock..... Computer picked ${computerMove},sooooo ${result}`)
+document.getElementById('text').innerHTML = (`You picked Scissors..... Computer picked ${computerMove},sooooo ${result}`)
     "
-    >
-      Scissors
-    </button>
+      >
+        Scissors
+      </button>
+    </div>
+    <p id="text"></p>
   </body>
 </html>
