--- a/index.html
+++ b/index.html
@@ -9,13 +9,7 @@
   </head>
   <body>
     <div>Hello</div>
-    <p class="container">
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto est
-      unde illo magnam veritatis, similique harum quae voluptatem, doloremque
-      necessitatibus enim sapiente quia sint laborum ex expedita vitae hic nulla
-      laudantium explicabo totam alias recusandae corporis autem! Reprehenderit
-      velit nemo cumque.
-    </p>
+    <p class="container">hello</p>
 
     <script src="script.js"></script>
   </body>
