--- a/index.html
+++ b/index.html
@@ -16,15 +16,22 @@
     <div class="container">
       <div class="counter-div">
         <h1>Counter App</h1>
-        <p>0</p>
+        <p class="count">0</p>
 
         <hr />
         <div class="buttons">
           <button class="subtract">
-            <i class="fas fa-arrow-up"></i>Subtract
+            <i class="fa fa-arrow-down"></i>
+            Subtract
           </button>
-          <button class="reset"><i class="fas fa-spinner"></i>Reset</button>
-          <button class="add"><i class="fas fa-spinner"></i>Add</button>
+          <button class="reset">
+            <i class="fa fa-spinner fa-spin"></i>
+            Reset
+          </button>
+          <button class="add">
+            <i class="fa fa-regular fa-plus"></i>
+            Add
+          </button>
         </div>
       </div>
     </div>
