javascript counter finished fixes

--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
         <hr />
         <div class="buttons">
           <button class="subtract">
-            <i class="fa fa-arrow-down"></i>
+            <i class="fa fa-arrow-down subtract"></i>
             Subtract
           </button>
           <button class="reset">
-            <i class="fa fa-spinner fa-spin"></i>
+            <i class="fa fa-spinner fa-spin reset"></i>
             Reset
           </button>
           <button class="add">
-            <i class="fa fa-regular fa-plus"></i>
+            <i class="fa fa-regular fa-plus add"></i>
             Add
           </button>
         </div>
