--- a/index.html
+++ b/index.html
@@ -5,36 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="main.css" />
-
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
     <title>Document</title>
   </head>
   <body>
-    <div class="container">
-      <div class="counter-div">
-        <h1>Counter App</h1>
-        <p class="count">0</p>
-
-        <hr />
-        <div class="buttons">
-          <button class="subtract">
-            <i class="fa fa-arrow-down subtract"></i>
-            Subtract
-          </button>
-          <button class="reset">
-            <i class="fa fa-spinner fa-spin reset"></i>
-            Reset
-          </button>
-          <button class="add">
-            <i class="fa fa-regular fa-plus add"></i>
-            Add
-          </button>
-        </div>
-      </div>
-    </div>
+    <div>Hello</div>
+    <p class="container">hello</p>
 
     <script src="script.js"></script>
   </body>
